text align fix

--- a/styles/team.css
+++ b/styles/team.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 .profile-info {
-    text-align: center;
+    text-align: left;
 }
 
 .profile-picture {
